--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -634,7 +634,7 @@
   bind_python: True
 
 - name: "hardshrink_grad"
-  signature: "Tensor (Tensor dy, Tensor y, Double lambd=0.5) => HardShrinkGrad"
+  signature: "Tensor (Tensor y, Tensor dy, Double lambd=0.5) => HardShrinkGrad"
   bind_python: False
 
 - name: "softmax"
@@ -1698,7 +1698,7 @@
   bind_python: True
 
 - name: "softshrink_grad"
-  signature: "Tensor (Tensor dy, Tensor y, Double alpha=0.5) => SoftShrinkGrad"
+  signature: "Tensor (Tensor y, Tensor dy, Double alpha=0.5) => SoftShrinkGrad"
   bind_python: False
 
 - name: "one_hot"
