--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -2475,3 +2475,21 @@
 - name: "grad_acc_unpack"
   signature: "Tensor (Tensor input, Int32 unpack_num) => GradAccUnpack"
   bind_python: False
+
+- name: "deform_conv2d"
+  signature:
+    "Tensor (Tensor input, Tensor offset,Tensor weight, Int32List[1] stride=1,
+    Int32List[1] padding=0, Int32List[1] dilation=1, Int32 groups=1,Int32 derormable_groups=1) => Deformconv2d"
+  bind_python: True
+
+- name: "deform_conv2d_input_grad"
+  signature:
+    "Tensor (Tensor output_grad,Tensor input, Tensor offset,Tensor weight, Int32List[1] stride=1,
+    Int32List[1] padding=0, Int32List[1] dilation=1, Int32 groups=1,Int32 derormable_groups=1) => Deformconv2dInputGrad"
+  bind_python: False
+
+- name: "deform_conv2d_param_grad"
+  signature:
+    "Tensor (Tensor input, Tensor offset,Tensor output_grad, Int32List[1] stride=1,
+    Int32List[1] padding=0, Int32List[1] dilation=1, Int32 groups=1,Int32 derormable_groups=1) => Deformconv2dParamGrad"
+  bind_python: False
