--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1786,7 +1786,8 @@
   bind_python: True
 
 - name: "linalg_cross"
-  signature: "Tensor (Tensor input, Tensor other, *, Int64 dim=-1) => LinalgCross"
+  signature: "Tensor (Tensor input, Tensor other, Int64 dim=None) => LinalgCross"
+  bind_python: True
 
 - name: "dropout"
   signature: "Tensor (Tensor input, Float p=0.5, Bool training=True, Bool inplace=False, Generator generator=None, *, Tensor addend=None) => Dropout"
