--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1293,13 +1293,17 @@
   signature: "TensorTuple (Tensor dy, Tensor x, Tensor mean, Tensor inv_variance, Int64 begin_params_axis) => LayerNormParamGrad"
   bind_python: False
 
-- name: "group_norm_affine"
+- name: "group_norm"
   signature:
-    "TensorTuple (Tensor x, Tensor gamma, Tensor beta, Bool affine, Int32 num_groups, Double epsilon) => GroupNormAffine"
+    "Tensor (Tensor x, Tensor gamma=None, Tensor beta=None, Bool affine, Int32 num_groups, Double epsilon) => GroupNorm"
   bind_python: True
 
 - name: "group_norm_affine_grad"
   signature: "Tensor (Tensor dy, Tensor x, Tensor mean, Tensor inv_variance, Tensor gamma, Int32 num_groups, Double epsilon) => GroupNormAffineGrad"
+  bind_python: True
+
+- name: "group_norm_grad"
+  signature: "Tensor (Tensor dy, Tensor x, Tensor mean, Tensor inv_variance, Int32 num_groups, Double epsilon) => GroupNormGrad"
   bind_python: True
 
 - name: "group_norm_param_grad"
