Implement sync batchnorm (#8854)
* add sync batchnorm forward implementation

* refine comments

* refine

* fix wrong channel_size

* fix autograd.Function backward bug when not all inputs requires grad

* add backward implementation

* add test

* auto format by CI

* refine

* fix doc

* support nhwc format

* auto format by CI

* enlarge timeout

* move sync-batchnorm tests to ddp folder

* fix ci

* meger master

Co-authored-by: oneflow-ci-bot <ci-bot@oneflow.org>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -927,6 +927,11 @@ jobs:
               repo: context.repo.repo,
               body: "<details>\n <summary>Speed stats:</summary>\n\n ``` \n${{ steps.speed.outputs.stats }}\n ``` \n\n</details>".replace(/\\n/g, '\n')
             })
+      - name: Sync BatchNorm test
+        timeout-minutes: 30
+        if: ${{ !fromJson(matrix.cache-hit) && matrix.test-type == 'module' && !fromJson(matrix.is-distributed) }}
+        run: |
+          docker exec -e ONEFLOW_TEST_DIR=$PWD/python/oneflow/test/ddp ${{ env.TEST_CONTAINER_NAME }} bash ci/test/test_sync_batchnorm.sh
       - name: Module API test
         timeout-minutes: 60
         if: ${{ !fromJson(matrix.cache-hit) && matrix.test-type == 'module' && !fromJson(matrix.is-distributed) }}
