Restruct Math Elementwise Kernel (#8936)
* init

* under debug

* fix bug

* fix gradient func

* add more functor

* try to use seq add acos

* add fully support for dyx math unary operation

* support dy y

* remove sigmoid v2 and support backward with fill math op

* support negative and remove redundant op and kernel

* fix format

* refine

* refine format and remove redundant lazy grad register and seq

* Refine list

* refine

* fix comment

* use zeroslike instead of fill

* add habs specialization

* Add more test

* fix compile error

* remove higher order negative grad

* Fix higher derivative and add annotaion

* fix docs and sign bug

* auto format by CI

* fix format

* fix

* fix

* auto format by CI

* Revert sparse softmax crossentropy docstr

* fix space

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: oneflow-ci-bot <ci-bot@oneflow.org>

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -618,7 +618,7 @@
   bind_python: True
 
 - name: "sigmoid_grad"
-  signature: "Tensor (Tensor x, Tensor dy) => SigmoidGrad"
+  signature: "Tensor (Tensor y, Tensor dy) => SigmoidGrad"
   bind_python: True
 
 - name: "hardsigmoid"
@@ -1266,10 +1266,6 @@
 - name: "negative"
   signature: "Tensor (Tensor x) => Negative"
   bind_python: True
-
-- name: "negative_grad"
-  signature: "Tensor (Tensor x, Tensor dy) => NegativeGrad"
-  bind_python: False
 
 - name: "layer_norm_affine"
   signature:
