--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -2593,3 +2593,43 @@
 - name: "batch_norm_backward_elemt"
   signature: "Tensor (Tensor grad_out, Tensor input, Tensor mean, Tensor invstd, Tensor weight, Tensor sum_dy, Tensor sum_dy_xmu, Tensor count, Int32 axis) => BatchNormBackwardElemt"
   bind_python: True
+
+- name: "tan_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  TanGradGrad" 
+  bind_python: False
+
+- name: "sinh_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  SinhGradGrad" 
+  bind_python: False
+
+- name: "cosh_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  CoshGradGrad" 
+  bind_python: False
+
+- name: "tanh_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  TanhGradGrad" 
+  bind_python: False
+
+- name: "acos_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  AcosGradGrad" 
+  bind_python: False
+
+- name: "asin_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  AsinGradGrad" 
+  bind_python: False
+
+- name: "atan_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  AtanGradGrad" 
+  bind_python: False
+
+- name: "asinh_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  AsinhGradGrad" 
+  bind_python: False
+
+- name: "acosh_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  AcoshGradGrad" 
+  bind_python: False
+
+- name: "atanh_grad_grad"  
+  signature: "Tensor (Tensor x, Tensor dydx) =>  AtanhGradGrad" 
+  bind_python: False
