--- a/oneflow/api/python/functional/dispatch_stateful_ops.yaml
+++ b/oneflow/api/python/functional/dispatch_stateful_ops.yaml
@@ -158,7 +158,7 @@
 
 
 - name: "dispatch_eager_ccl_all_reduce"
-  signature: "Tensor (OpExpr op, Tensor input, String parallel_conf, Bool async_launch=False) => DispatchEagerCclAllReduce"
+  signature: "Tensor (OpExpr op, Tensor input, String parallel_conf) => DispatchEagerCclAllReduce"
   bind_python: True
 
 - name: "dispatch_raw_reader"
