add unary log10

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -492,6 +492,14 @@
   signature: "Tensor (Tensor x, Tensor dy) => Log2Grad"
   bind_python: False
 
+- name: "log10"
+  signature: "Tensor (Tensor x) => Log10"
+  bind_python: True
+
+- name: "log10_grad"
+  signature: "Tensor (Tensor x, Tensor dy) => Log10Grad"
+  bind_python: False
+
 - name: "sqrt"
   signature: "Tensor (Tensor x) => Sqrt"
   bind_python: True
