use fast math op in wkv kernel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ option(WITH_MLIR "" OFF)
 option(WITH_MLIR_CUDA_CODEGEN "" OFF)
 option(OF_SOFTMAX_USE_FAST_MATH "" ON)
 option(OF_LAYER_NORM_USE_FAST_MATH "" ON)
+option(OF_WKV_USE_FAST_MATH "" ON)
 option(TREAT_WARNINGS_AS_ERRORS "" ON)
 option(MAYBE_NEED_ERROR_MSG_CHECK "" OFF)
 
@@ -167,6 +168,10 @@ endif()
 
 if(OF_LAYER_NORM_USE_FAST_MATH)
   add_definitions(-DOF_LAYER_NORM_USE_FAST_MATH)
+endif()
+
+if(OF_WKV_USE_FAST_MATH)
+  add_definitions(-DOF_WKV_USE_FAST_MATH)
 endif()
 
 if(CPU_THREADING_RUNTIME STREQUAL "TBB")
