install headers when building llvm in-tree

--- a/oneflow/ir/CMakeLists.txt
+++ b/oneflow/ir/CMakeLists.txt
@@ -93,3 +93,40 @@ if(WITH_MLIR)
   add_subdirectory(oneflow-extension)
   add_subdirectory(oneflow-runner)
 endif(WITH_MLIR)
+
+if(BUILD_PYTHON)
+  foreach(llvm_include_dir ${LLVM_INCLUDE_DIRS})
+    if(llvm_include_dir MATCHES "/include$")
+      list(APPEND LLVM_INSTALL_INCLUDE_DIRS "${llvm_include_dir}//")
+    else()
+      list(APPEND LLVM_INSTALL_INCLUDE_DIRS "${llvm_include_dir}")
+    endif()
+  endforeach()
+  install(
+    DIRECTORY ${LLVM_INSTALL_INCLUDE_DIRS}
+    DESTINATION ${ONEFLOW_INCLUDE_DIR}
+    COMPONENT oneflow_py_include
+    EXCLUDE_FROM_ALL FILES_MATCHING
+    PATTERN llvm/ADT/ArrayRef.h
+    PATTERN llvm/ADT/Hashing.h
+    PATTERN llvm/ADT/iterator.h
+    PATTERN llvm/ADT/None.h
+    PATTERN llvm/ADT/SmallVector.h
+    PATTERN llvm/ADT/STLExtras.h
+    PATTERN llvm/ADT/STLFunctionalExtras.h
+    PATTERN llvm/ADT/DenseMapInfo.h
+    PATTERN llvm/ADT/identity.h
+    PATTERN llvm/ADT/iterator_range.h
+    PATTERN llvm/ADT/Optional.h
+    PATTERN llvm/ADT/STLArrayExtras.h
+    PATTERN llvm/ADT/STLForwardCompat.h
+    PATTERN llvm/ADT/StringRef.h
+    PATTERN llvm/Config/abi-breaking.h
+    PATTERN llvm/Config/llvm-config.h
+    PATTERN llvm/Support/Compiler.h
+    PATTERN llvm/Support/DataTypes.h
+    PATTERN llvm/Support/ErrorHandling.h
+    PATTERN llvm/Support/SwapByteOrder.h
+    PATTERN llvm/Support/type_traits.h
+    PATTERN llvm-c/DataTypes.h)
+endif()
