add exponential distribution

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -812,6 +812,14 @@
     ]
   bind_python: True
 
+- name: "exponential"
+  signature: "Tensor (Tensor input, Double lambd=1, *, DataType dtype=kFloat, Generator generator=None) => Exponential"
+  bind_python: True
+
+- name: "exponential_"
+  signature: "Tensor (Tensor input, Double lambd=1, *, DataType dtype=kFloat, Generator generator=None) => ExponentialInplace"
+  bind_python: False
+
 - name: "concat"
   signature: "Tensor (TensorTuple inputs, Int64 dim=0) => Concat"
   bind_python: True
