sharedlibs enables and pass enables in commpute

--- a/oneflow/ir/oneflow-extension/CMakeLists.txt
+++ b/oneflow/ir/oneflow-extension/CMakeLists.txt
@@ -1,6 +1,7 @@
 oneflow_add_mlir_library(
   MLIROneFlowExtension
   extension.cpp
+  sharedlibs.cpp
   mlir_jit_op.cpp
   kernel_launch_op.cpp
   ir_pass.cpp
