--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1112,6 +1112,10 @@
   signature: "Tensor(Tensor out_grad, Tensor input, Tensor target, Tensor weight=None, Int64 ignore_index) => NLLGrad"
   bind_python: False
 
+- name: "nll_prob_grad"
+  signature: "Tensor(Tensor out_grad, Tensor input, Tensor target, Tensor weight=None, Double label_smoothing) => NLLProbGrad"
+  bind_python: False
+
 - name: "binary_cross_entropy_loss"
   signature: "Tensor(Tensor input, Tensor target, Tensor weight=None, String reduction=\"mean\") => BinaryCrossEntropyLoss"
   bind_python: True
@@ -1151,6 +1155,10 @@
 - name: "cross_entropy_label_smoothing"
   signature: "Tensor(Tensor input, Tensor target, Tensor weight=None, Int64 ignore_index=-100, String reduction=\"mean\", Double label_smoothing=0.0) => CrossEntropyLabelSmoothing"
   bind_python: False
+
+- name: "cross_entropy_prob"
+  signature: "Tensor(Tensor input, Tensor target, Tensor weight=None, String reduction=\"mean\", Double label_smoothing=0.0) => CrossEntropyProb"
+  bind_python: True
 
 - name: "distributed_sparse_cross_entropy_grad"
   signature: "Tensor (Tensor prediction, Tensor label, Tensor dy, Int64 depth) => SparseCrossEntropyMsGrad"
