--- a/oneflow/ir/oneflow-extension/CMakeLists.txt
+++ b/oneflow/ir/oneflow-extension/CMakeLists.txt
@@ -1,9 +1,9 @@
 oneflow_add_mlir_library(
   MLIROneFlowExtension
-  extension.cpp
   sharedlibs.cpp
   mlir_jit_op.cpp
   mlir_jit_op_infer.cpp
+  mlir_jit_op_kernel.cpp
   kernel_launch_op.cpp
   ir_pass.cpp
   lr_jit.cpp
