--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1704,7 +1704,7 @@
 
 - name: "unsorted_segment_sum_like"
   signature: "Tensor (Tensor x, Tensor segment_ids, Tensor like, Int64 axis) => UnsortedSegmentSumLike"
-  bind_python: False
+  bind_python: True
 
 - name: "tril"
   signature: "Tensor (Tensor x, Int64 diagonal=0) => Tril"
@@ -2388,7 +2388,7 @@
   bind_python: True
 
 - name: "one_embedding_unique_key_value_pair"
-  signature: "TensorTuple (Tensor keys, Tensor values=None, Int32 num_tables) => OneEmbeddingUniqueKeyValuePair"
+  signature: "TensorTuple (Tensor keys, Tensor values=None, Int32 num_tables, String embedding_name) => OneEmbeddingUniqueKeyValuePair"
   bind_python: True
 
 - name: "one_embedding_embedding_put"
